# DIAscope

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: demo.ipynb
src/diascope/: convert.py  helpers.py  parse.py  write.py
test/: test_mzml_dia_equal.py
test/data/: small.dia
tests/: test_mzml_dia_equal.py
