[tool.poetry]
name = "DIAscope"
version = "0.1.0"
description = ""
authors = ["Rico Meinl <rmeinl@talus.bio>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.4"
pyteomics = "^4.5.2"
pandas = "^1.3.5"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
