[tool.poetry]
name = "DIAscope"
version = "0.1.0"
description = ""
authors = ["Rico Meinl <rmeinl@talus.bio>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.4"
pyteomics = "^4.5.2"
pandas = "^1.3.5"
lxml = "^4.7.1"
matplotlib = "^3.5.1"
click = "^8.0.3"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipykernel = "^6.7.0"

[tool.poetry.scripts]
convert = "diascope.convert:convert"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
